--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+семёрки*.xlsx*
+trashbox/
+YandexUserNOK
+YandexUserMonitoring
+ChromeProfiles
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
